Gallery fade in/out fixed

--- a/Page for portfolio/gallery.html
+++ b/Page for portfolio/gallery.html
@@ -6,17 +6,8 @@
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 
-		
-		<!-- Bootstrap -->
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" type="text/css" href="bootstrap/bootstrap.min.css">
-
-		<!-- Optional theme -->
-		<link rel="stylesheet" type="text/css" href="bootstrap/bootstrap-theme.min.css">
-
-		<!-- Bootstrap -->
-
 		<link rel="icon" href="img/icon.ico">
+
 		<script type="text/javascript" src="js/jquery.min.js"></script>
 
 	</head>
@@ -122,22 +113,22 @@
 		</div>
 
 		<script>
+		/* Fade in/out */
+			$(document).ready(function() {
+			$('body').css('display', 'none');
+			$('body').fadeIn(1000);
+				$('.link').click(function() {
+				event.preventDefault();
+				newLocation = this.href;
 
-			/* Fade in/out */
-			$(document).ready(function(){
-			    // to fade in on page load
-			    $("body").css("display", "none");
-			    $("body").fadeIn(350); 
-			    // to fade out before redirect
-			    $('a').click(function(e){
-			        redirect = $(this).attr('href');
-			        e.preventDefault();
-			        $('body').fadeOut(500, function(){
-			            document.location.href = redirect
-			        });
-			    });
+			$('body').fadeOut(1000, newpage);
+
+			});
+				function newpage() {
+					window.location = newLocation;
+				}
+
 			});
 		</script>
-
 	</body>
 </html>
