--- a/Page for portfolio/gallery.html
+++ b/Page for portfolio/gallery.html
@@ -26,7 +26,7 @@
 			</div>
 		</div>
 
-		<div id="wrapper">
+		<div class="wrapper">
 			<div id="gallery">
 				<h2></h2>		
 
@@ -86,6 +86,7 @@
     				<div class="item">
     					<img src="img/work/Year2/9TsuboHouseAutocad/4.jpg">
     				</div>
+
 				</div>
 
 			</div>
