--- a/Page for portfolio/info.html
+++ b/Page for portfolio/info.html
@@ -23,7 +23,7 @@
 			</div>
 		</div>
 
-		<div id="wrapper">
+		<div class="wrapper">
 			<h2 class="info">About Vitalij Duk</h2>
 			<div id="additionalInfo">
 				<div class="profilePhoto"><img src="img/profilePhoto.jpg" alt="photo of Vitalij Duk"></div>
