--- a/Elya Portfolio v2/index.html
+++ b/Elya Portfolio v2/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Ely's Art</title>
+		<title>Elie's Art</title>
 		<link rel="icon" href="img/favicon.ico">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
@@ -9,7 +9,7 @@
 		<div id="container">
 			<!-- Navigation -->
 			<div class="navigation">
-				<ul>
+				<ul class="nav-links">
 					<li>
 						<a href="#about">About</a>
 					</li>
@@ -27,16 +27,21 @@
 			<!-- About Section -->
 			<div id="about">
 				<div class="profile">
-					<img src="img/profile-photo.jpg">
-				</div>
-				<div class="socialStuff">
-					<a href="https://www.facebook.com/profile.php?id=100001265558955"><img src="img/social/facebook.png"></a>
-					<a href="#contact"><img src="img/social/mail.png"></a>
+					<img src="img/profile-ellie.jpg" alt="Profile Photo of Ellie">
 				</div>
 
 				<div class="info">
-					<img src="img/aboutme.png">
+					<p>Hello! My name is Elie. Currently I'm located in Lithuania, Kaunas. I like to draw graphic images in Illustrator. Everyday I'm trying to improve my skills and make better images.
+					<br>
+					<br>Feel free to check my works!</p>
+
+					<div class="social">					
+						<a href="https://www.facebook.com/profile.php?id=100001265558955" target="_blank"><img src="img/social/facebook.png" alt="facebook"></a>
+						<a href="#contact"><img src="img/social/mail.png" alt="e-mail"></a>
+					</div>
+
 				</div>
+
 
 			</div>
 
@@ -46,11 +51,18 @@
 
 			<!-- Contact Section -->
 			<div id="contact">
+				<h3>Contact Me</h3>
+				<p class="contactText">Feel free to contact me if you have any questions or requests.</p>
+				<iframe src="envelope/contactform.html"></iframe>
 				
 			</div>
 			<!-- Footer -->
 			<div id="footer">
-				All rights reserved &copy; Site by <a href="http://www.staciedesign.com">Anastasija Scepak</a>
+				<p><span class="copyright">All rights reserved &copy; Site by <a class="stacie-link" href="http://www.staciedesign.com">Stacie</a></span></p>
+			<div class="social2">
+				<a href="https://www.facebook.com/profile.php?id=100001265558955" alt="facbook" target="_blank"><img src="img/social/facebook2.png" alt="facebook"></a>
+				<a href="#contact"><img src="img/social/mail2.png" alt="e-mail" alt="e-mail"></a>
+			</div>
 			</div>
 		</div>
 
