--- a/Elya Portfolio v2/index.html
+++ b/Elya Portfolio v2/index.html
@@ -43,6 +43,7 @@
 					<div class="social">					
 						<a href="https://www.facebook.com/profile.php?id=100001265558955" target="_blank"><img src="img/social/facebook.png" alt="facebook"></a>
 						<a href="#contact"><img src="img/social/mail.png" alt="e-mail"></a>
+						<a href="http://www.shutterstock.com/cat.mhtml?gallery_id=1364107" target="_blank"><img src="img/social/shutterstock.png" alt="shutterstock"></a>
 					</div>
 
 				</div>
@@ -52,8 +53,7 @@
 
 			<!-- Works Section -->
 			<div id="works">
-				
-		<div class="book_wrapper">
+			<div class="book_wrapper">
 			<a id="next_page_button"></a>
 			<a id="prev_page_button"></a>
 			<div id="loading" class="loading">Loading pages...</div>
@@ -144,6 +144,8 @@
 					</div>					
 				</div>
 			</div>
+
+			<div class="shutterLink">For more of my works to see please visit my <a href="http://www.shutterstock.com/cat.mhtml?gallery_id=1364107" taget="_blank" alt="ShutterStock">ShutterStock</a></div>
 		</div>
 
 
