--- a/Elya Portfolio v2/envelope/contactform.html
+++ b/Elya Portfolio v2/envelope/contactform.html
@@ -12,13 +12,13 @@
 				<form>
 					<p>Hello Ellie,</p>
 					<label for="email">Your Message: </label>
-					<textarea name="message" value="Your Message" id="message"></textarea>
+					<textarea name="message" value="Your Message" id="message" class="required emailField"></textarea>
 					<p>Kind regards,</p>
 					<label for="name">Name: </label>
 					<input type="text" name="name" value="" id="name" />
 					<label for="email">Email: </label>
 					<input type="text" name="email" value="" id="email" />
-					<input type="submit" name="submit" value="Send!">
+					<input type="submit" name="submit" value="Send!" class="btn-submit">
 				</form>
 			</div>
 
