Contact form changes
Ellie —> Elie
Hello —> Dear

--- a/Elya Portfolio v2/envelope/contactform.html
+++ b/Elya Portfolio v2/envelope/contactform.html
@@ -10,7 +10,7 @@
 		<div id="wrap">
 			<div id="form_wrap">
 				<form>
-					<p>Hello Ellie,</p>
+					<p>Dear Elie,</p>
 					<label for="email">Your Message: </label>
 					<textarea name="message" value="Your Message" id="message" class="required emailField"></textarea>
 					<p>Kind regards,</p>
