--- a/Elya Portfolio v2/index.html
+++ b/Elya Portfolio v2/index.html
@@ -55,7 +55,7 @@
 				</div>
 
 				<div class="info">
-					<p>Hello! My name is Elie. Currently I'm located in Lithuania, Kaunas. <br>I like to draw graphic images in Illustrator. Everyday I'm trying to improve my skills and make better images.
+					<p>Hello! My name is Elie. Currently I'm located in Lithuania, Kaunas. <br>I like to draw graphic images in Illustrator. <br>Everyday I'm improving my skills to create better images.
 					<br>
 					<br></p>
 
@@ -185,7 +185,7 @@
 			</div>
 			<!-- Footer -->
 			<div id="footer">
-				<p><span class="copyright">All rights reserved &copy; Site by <a class="stacie-link" href="http://www.staciedesign.com">Stacie</a></span></p>
+				<p><span class="copyright">All rights reserved &copy; Site by <a class="stacie-link" href="http://www.staciedesign.com" taget="_blank">Stacie</a></span></p>
 			</div>
 			</div>
 		</div>
