--- a/Elya Portfolio v2/index.html
+++ b/Elya Portfolio v2/index.html
@@ -118,6 +118,10 @@
 					<div>
 						<img src="img/works/running_girl.jpg" alt="Elie's work"/>
 					</div>
+
+					<div>
+						<img src="img/works/good_morning.jpg" alt="Elie's work">
+					</div>						
 					
 					<div>
 						<img src="img/works/cartoon_bat.jpg" alt="Elie's work"/>
@@ -165,7 +169,7 @@
 
 					<div>
 						<img src="img/works/Set_of_anime_style_eyes.jpg" alt="Elie's work">
-					</div>					
+					</div>				
 				</div>
 			</div>
 
