--- a/practice_/index.html
+++ b/practice_/index.html
@@ -3,57 +3,95 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link href='http://fonts.googleapis.com/css?family=Lato:400,700|PT+Sans:400,700' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" href="font-awesome-4.3.0/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<title>Lorem Ipsum</title>
 	</head>
 	<body>
 		<div id="container">
-			<div id="header">
-				<ul id="nav">
-					<li><a href="#">Link 1</a></li>
-					<li><a href="#">Link 2</a></li>
-					<li><a href="#">Link 3</a></li>
-					<li><a href="#">Link 4</a></li>
-				</ul>
-			</div>
-
-			<div class="section">
-				<div class="row">
-					<div class="col-xs-6 col-md-5 push-left">
-						<h3>Clita mucius</h3>
-						<p>Lorem ipsum dolor sit amet, et dicam dissentiunt mel, vix ipsum expetenda in, an utroque erroribus est. Mel epicuri phaedrum ei, no eum discere vulputate disputando, mei iuvaret expetenda deseruisse in. Clita mucius consequuntur eu mei.</p>
-						</div>
-					<img class="col-xs-6 col-md-7" src="img/food-drink-kitchen-cutting-board.jpg">
-				</div>	
-			</div>
-
-			<div class="section">
-				<div class="row">
-					<img class="col-xs-6 col-md-7" src="img/food-morning-breakfast-orange-juice.jpg">
-					<div class="col-xs-6 col-md-5">
-						<div class="food-icon"><img src="img/coffee.png"></div>
-						<p>Vix liber decore ea, eos quod nullam an, mei saepe dolore eloquentiam te. Vim aperiam docendi consequat ea, suas forensibus at vis. Cu ius eleifend aliquando delicatissimi, legere melius quo et.</p>
+			<div class="row">
+				<div id="header">
+					<div class="col-xs-8 col-sm-12 col-md-12">
+						<ul id="nav">
+							<li><a href="#">Link 1</a></li>
+							<li><a href="#">Link 2</a></li>
+							<li><a href="#">Link 3</a></li>
+							<li><a href="#">Link 4</a></li>
+						</ul>
 					</div>
 				</div>
 			</div>
 
 			<div class="section">
 				<div class="row">
-					<div class="col-xs-6 col-md-5 push-left">
-						<div class="food-icon"><img src="img/fork-knife.png"></div>
-						<p>Ne mea solum tation moderatius. Pri purto senserit complectitur at, vel ei debitis eleifend patrioque. An has dolorum intellegam. Dico dicat in pri, mel tollit pertinax ad.</p>
+					<div class="col-xs-12 col-sm-12 col-md-5 push-left">
+						<div class="food-icon"><img src="img/coffee.png"></div>
+						<h3>Clita mucius</h3>
+						<div class="mini-rectangle"></div>
+						<p>Lorem ipsum dolor sit amet, et dicam dissentiunt mel, vix ipsum expetenda in, an utroque erroribus est. Mel epicuri phaedrum ei, no eum discere vulputate disputando, mei iuvaret expetenda deseruisse in. Clita mucius consequuntur eu mei.</p>
+						<p class="other-color"><a href="#">Mel omnis</a></p>
+						</div>
+					<img class="col-xs-12 col-sm-12 col-md-7" src="img/food-drink-kitchen-cutting-board.jpg">
+				</div>	
+			</div>
+
+			<div class="section">
+				<div class="row">
+					<img class="col-xs-12 col-sm-12 col-md-7" src="img/food-morning-breakfast-orange-juice.jpg">
+					<div class="col-xs-12 col-sm-12 col-md-5 push-right">
+						<div class="food-icon"><img src="img/cook.png"></div>
+						<h3>Dico dicat</h3>
+						<div class="mini-rectangle"></div>
+						<p>Vix liber decore ea, eos quod nullam an, mei saepe dolore eloquentiam te. Vim aperiam docendi consequat ea, suas forensibus at vis. Cu ius eleifend aliquando delicatissimi, legere melius quo et.</p>
+						<p class="other-color"><a href="#">Et oratio</a></p>
 					</div>
-					<img class="col-xs-6 col-md-7" src="img/food-vegetables-meal-kitchen.jpg">
+				</div>
+			</div>
+
+			<div class="section">
+				<div class="row">
+					<div class="col-xs-12 col-sm-12 col-md-5 push-left">
+						<div class="food-icon"><img src="img/fork-knife.png"></div>
+						<h3>Vix liber</h3>
+						<div class="mini-rectangle"></div>
+						<p>Ne mea solum tation moderatius. Pri purto senserit complectitur at, vel ei debitis eleifend patrioque. An has dolorum intellegam. Dico dicat in pri, mel tollit pertinax ad.</p>
+						<p class="other-color"><a href="#">Meliore nominati</a></p>
+					</div>
+					<img class="col-xs-12 col-sm-12 col-md-7" src="img/food-vegetables-meal-kitchen.jpg">
 				</div>	
 			</div>
 
 			<div class="img-section">
 				<div class="row">
-					<img class="col-md-12" src="img/food-kitchen-cutting-board-cooking.jpg">
+					<img class="col-xs-12 col-md-12" src="img/food-kitchen-cutting-board-cooking.jpg">
 				</div>	
 			</div>
 		<div>
 	</body>
-	<footer></footer>
+	<footer>
+		<div class="row">
+			<div class="col-md-5 push-left">
+				<h4>Contact Information</h4>
+				<div class="mini-rectangle1"></div>
+				<ol>
+					<li><a href="#">+1234567890</a></li>
+					<li><a href="#">email@email.com</a></li>
+					<br>	
+					<li>Country, City</li>
+					<li>Address 1 - 10</li>
+					<li>Postcode</li>
+				</ol>
+			</div>
+
+			<div class="col-md-offset-4 col-md-3">
+				<a href="#"><i class="fa fa-facebook-official"></i></a>
+				<a href="#"><i class="fa fa-twitter-square"></i></a>
+				<a href="#"><i class="fa fa-google-plus-square"></i></a>
+				<a href="#"><i class="fa fa-instagram"></i></a>
+			</div>
+
+
+		</div>
+	</footer>
 </html>
