--- a/practice_/index.html
+++ b/practice_/index.html
@@ -30,7 +30,7 @@
 						<h3>Clita mucius</h3>
 						<div class="mini-rectangle"></div>
 						<p>Lorem ipsum dolor sit amet, et dicam dissentiunt mel, vix ipsum expetenda in, an utroque erroribus est. Mel epicuri phaedrum ei, no eum discere vulputate disputando, mei iuvaret expetenda deseruisse in. Clita mucius consequuntur eu mei.</p>
-						<p class="other-color"><a href="#">Mel omnis</a></p>
+						<div class="other-color"><a href="#">Mel omnis</a></div>
 						</div>
 					<img class="col-xs-12 col-sm-12 col-md-7" src="img/food-drink-kitchen-cutting-board.jpg">
 				</div>	
@@ -44,7 +44,7 @@
 						<h3>Dico dicat</h3>
 						<div class="mini-rectangle"></div>
 						<p>Vix liber decore ea, eos quod nullam an, mei saepe dolore eloquentiam te. Vim aperiam docendi consequat ea, suas forensibus at vis. Cu ius eleifend aliquando delicatissimi, legere melius quo et.</p>
-						<p class="other-color"><a href="#">Et oratio</a></p>
+						<div class="other-color"><a href="#">Et oratio</a></div>
 					</div>
 				</div>
 			</div>
@@ -56,7 +56,7 @@
 						<h3>Vix liber</h3>
 						<div class="mini-rectangle"></div>
 						<p>Ne mea solum tation moderatius. Pri purto senserit complectitur at, vel ei debitis eleifend patrioque. An has dolorum intellegam. Dico dicat in pri, mel tollit pertinax ad.</p>
-						<p class="other-color"><a href="#">Meliore nominati</a></p>
+						<div class="other-color"><a href="#">Meliore nominati</a></div>
 					</div>
 					<img class="col-xs-12 col-sm-12 col-md-7" src="img/food-vegetables-meal-kitchen.jpg">
 				</div>	
@@ -89,6 +89,7 @@
 				<a href="#"><i class="fa fa-twitter-square"></i></a>
 				<a href="#"><i class="fa fa-google-plus-square"></i></a>
 				<a href="#"><i class="fa fa-instagram"></i></a>
+				<div class="copyright">All Rights Reserved &copy; 2015</div>
 			</div>
 
 
