--- a/practice_/index.html
+++ b/practice_/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="font-awesome-4.3.0/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="css/queries.css">
 		<title>Lorem Ipsum</title>
 	</head>
 	<body>
@@ -25,12 +26,12 @@
 
 			<div class="section">
 				<div class="row">
-					<div class="col-xs-12 col-sm-12 col-md-5 push-left">
+					<div class="col-xs-12 col-sm-12 col-md-5">
 						<div class="food-icon"><img src="img/coffee.png"></div>
 						<h3>Clita mucius</h3>
 						<div class="mini-rectangle"></div>
-						<p>Lorem ipsum dolor sit amet, et dicam dissentiunt mel, vix ipsum expetenda in, an utroque erroribus est. Mel epicuri phaedrum ei, no eum discere vulputate disputando, mei iuvaret expetenda deseruisse in. Clita mucius consequuntur eu mei.</p>
-						<div class="other-color"><a href="#">Mel omnis</a></div>
+							<p>Lorem ipsum dolor sit amet, et dicam dissentiunt mel, vix ipsum expetenda in, an utroque erroribus est. Mel epicuri phaedrum ei, no eum discere vulputate disputando, mei iuvaret expetenda deseruisse in. Clita mucius consequuntur eu mei.
+							<br><span class="other-color"><a href="#">Mel omnis</a></span></p>
 						</div>
 					<img class="col-xs-12 col-sm-12 col-md-7" src="img/food-drink-kitchen-cutting-board.jpg">
 				</div>	
@@ -39,24 +40,24 @@
 			<div class="section">
 				<div class="row">
 					<img class="col-xs-12 col-sm-12 col-md-7" src="img/food-morning-breakfast-orange-juice.jpg">
-					<div class="col-xs-12 col-sm-12 col-md-5 push-right">
+					<div class="col-xs-12 col-sm-12 col-md-5">
 						<div class="food-icon"><img src="img/cook.png"></div>
 						<h3>Dico dicat</h3>
 						<div class="mini-rectangle"></div>
-						<p>Vix liber decore ea, eos quod nullam an, mei saepe dolore eloquentiam te. Vim aperiam docendi consequat ea, suas forensibus at vis. Cu ius eleifend aliquando delicatissimi, legere melius quo et.</p>
-						<div class="other-color"><a href="#">Et oratio</a></div>
+							<p>Vix liber decore ea, eos quod nullam an, mei saepe dolore eloquentiam te. Vim aperiam docendi consequat ea, suas forensibus at vis. Cu ius eleifend aliquando delicatissimi, legere melius quo et.
+							<br><span class="other-color"><a href="#">Et oratio</a></span></p>
 					</div>
 				</div>
 			</div>
 
 			<div class="section">
 				<div class="row">
-					<div class="col-xs-12 col-sm-12 col-md-5 push-left">
+					<div class="col-xs-12 col-sm-12 col-md-5">
 						<div class="food-icon"><img src="img/fork-knife.png"></div>
 						<h3>Vix liber</h3>
 						<div class="mini-rectangle"></div>
-						<p>Ne mea solum tation moderatius. Pri purto senserit complectitur at, vel ei debitis eleifend patrioque. An has dolorum intellegam. Dico dicat in pri, mel tollit pertinax ad.</p>
-						<div class="other-color"><a href="#">Meliore nominati</a></div>
+							<p>Ne mea solum tation moderatius. Pri purto senserit complectitur at, vel ei debitis eleifend patrioque. An has dolorum intellegam. Dico dicat in pri, mel tollit pertinax ad.
+							<br><span class="other-color"><a href="#">Meliore nominati</a></span></p>
 					</div>
 					<img class="col-xs-12 col-sm-12 col-md-7" src="img/food-vegetables-meal-kitchen.jpg">
 				</div>	
@@ -71,7 +72,7 @@
 	</body>
 	<footer>
 		<div class="row">
-			<div class="col-md-5 push-left">
+			<div class="col-md-5">
 				<h4>Contact Information</h4>
 				<div class="mini-rectangle1"></div>
 				<ol>
