--- a/practice_/index.html
+++ b/practice_/index.html
@@ -15,10 +15,10 @@
 				<div id="header">
 					<div class="col-xs-8 col-sm-12 col-md-12">
 						<ul id="nav">
-							<li><a href="#">Link 1</a></li>
-							<li><a href="#">Link 2</a></li>
-							<li><a href="#">Link 3</a></li>
-							<li><a href="#">Link 4</a></li>
+							<li><a href="#">Link &#x23;1</a></li>
+							<li><a href="#">Link &#x23;2</a></li>
+							<li><a href="#">Link &#x23;3</a></li>
+							<li><a href="#">Link &#x23;4</a></li>
 						</ul>
 					</div>
 				</div>
@@ -31,6 +31,7 @@
 						<h3>Clita mucius</h3>
 						<div class="mini-rectangle"></div>
 							<p>Lorem ipsum dolor sit amet, et dicam dissentiunt mel, vix ipsum expetenda in, an utroque erroribus est. Mel epicuri phaedrum ei, no eum discere vulputate disputando, mei iuvaret expetenda deseruisse in. Clita mucius consequuntur eu mei.
+							<br>
 							<br><span class="other-color"><a href="#">Mel omnis</a></span></p>
 						</div>
 					<img class="col-xs-12 col-sm-12 col-md-7" src="img/food-drink-kitchen-cutting-board.jpg">
@@ -45,6 +46,7 @@
 						<h3>Dico dicat</h3>
 						<div class="mini-rectangle"></div>
 							<p>Vix liber decore ea, eos quod nullam an, mei saepe dolore eloquentiam te. Vim aperiam docendi consequat ea, suas forensibus at vis. Cu ius eleifend aliquando delicatissimi, legere melius quo et.
+							<br>	
 							<br><span class="other-color"><a href="#">Et oratio</a></span></p>
 					</div>
 				</div>
@@ -57,6 +59,7 @@
 						<h3>Vix liber</h3>
 						<div class="mini-rectangle"></div>
 							<p>Ne mea solum tation moderatius. Pri purto senserit complectitur at, vel ei debitis eleifend patrioque. An has dolorum intellegam. Dico dicat in pri, mel tollit pertinax ad.
+							<br>	
 							<br><span class="other-color"><a href="#">Meliore nominati</a></span></p>
 					</div>
 					<img class="col-xs-12 col-sm-12 col-md-7" src="img/food-vegetables-meal-kitchen.jpg">
