--- a/practice_/index.html
+++ b/practice_/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="stylesheet" type="text/css" href="css/queries.css">
+		<script type="text/javascript" src="js/jquery-2.1.4.js"></script>
 		<title>Lorem Ipsum</title>
 	</head>
 	<body>
@@ -68,14 +69,44 @@
 
 			<div class="img-section">
 				<div class="row">
-					<img class="col-xs-12 col-md-12" src="img/food-kitchen-cutting-board-cooking.jpg">
+					<div id="slideshow">
+						<img class="col-xs-12 col-md-12 active" src="img/food-kitchen-cutting-board-cooking.jpg">
+						<img class="col-xs-12 col-md-12" src="img/kitchen-cutting-board-cooking-bell-pepper.jpg">
+						<img class="col-xs-12 col-md-12" src="img/food-salad-restaurant-person.jpg">	
+						<img class="col-xs-12 col-md-12" src="img/water-drink-glass-drinking.jpg">
+
+					</div>
 				</div>	
 			</div>
 		<div>
+
+	<script type="text/javascript">
+		function slideSwitch() {
+		    var $active = $('#slideshow IMG.active');
+
+		    if ( $active.length == 0 ) $active = $('#slideshow IMG:last');
+
+		    var $next =  $active.next().length ? $active.next()
+		        : $('#slideshow IMG:first');
+
+		    $active.addClass('last-active');
+		        
+		    $next.css({opacity: 0.0})
+		        .addClass('active')
+		        .animate({opacity: 1.0}, 1000, function() {
+		            $active.removeClass('active last-active');
+		        });
+		}
+
+		$(function() {
+		    setInterval( "slideSwitch()", 3000 );
+		});
+	</script>	
+
 	</body>
-	<footer>
+	<div id="footer">
 		<div class="row">
-			<div class="col-md-5">
+			<div class="col-sm-6">
 				<h4>Contact Information</h4>
 				<div class="mini-rectangle1"></div>
 				<ol>
@@ -88,7 +119,7 @@
 				</ol>
 			</div>
 
-			<div class="col-md-offset-4 col-md-3">
+			<div class="col-sm-offset-3 col-sm-3">
 				<a href="#"><i class="fa fa-facebook-official"></i></a>
 				<a href="#"><i class="fa fa-twitter-square"></i></a>
 				<a href="#"><i class="fa fa-google-plus-square"></i></a>
@@ -98,5 +129,5 @@
 
 
 		</div>
-	</footer>
+	</div>
 </html>
