--- a/practice_/index.html
+++ b/practice_/index.html
@@ -119,7 +119,7 @@
 				</ol>
 			</div>
 
-			<div class="col-sm-offset-3 col-sm-3">
+			<div class="icons-copy col-sm-offset-3 col-sm-3">
 				<a href="#"><i class="fa fa-facebook-official"></i></a>
 				<a href="#"><i class="fa fa-twitter-square"></i></a>
 				<a href="#"><i class="fa fa-google-plus-square"></i></a>
