--- a/practice_/index.html
+++ b/practice_/index.html
@@ -6,6 +6,9 @@
 		<link rel="stylesheet" href="font-awesome-4.3.0/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+
+		<link rel="icon" href="img/favicon.ico">
+
 		<link rel="stylesheet" type="text/css" href="css/queries.css">
 		<script type="text/javascript" src="js/jquery-2.1.4.js"></script>
 		<title>Lorem Ipsum</title>
@@ -93,13 +96,13 @@
 		        
 		    $next.css({opacity: 0.0})
 		        .addClass('active')
-		        .animate({opacity: 1.0}, 1000, function() {
+		        .animate({opacity: 1.0}, 900, function() {
 		            $active.removeClass('active last-active');
 		        });
 		}
 
 		$(function() {
-		    setInterval( "slideSwitch()", 3000 );
+		    setInterval( "slideSwitch()", 2500 );
 		});
 	</script>	
 
