--- a/practice_/index.html
+++ b/practice_/index.html
@@ -17,20 +17,22 @@
 		<div id="container">
 			<div class="row">
 				<div id="header">
-					<div class="col-xs-8 col-sm-12 col-md-12">
+					<!-- <div class="col-xs-8 col-sm-12 col-md-12"> -->
 						<ul id="nav">
 							<li><a href="#">Link &#x23;1</a></li>
 							<li><a href="#">Link &#x23;2</a></li>
 							<li><a href="#">Link &#x23;3</a></li>
 							<li><a href="#">Link &#x23;4</a></li>
 						</ul>
-					</div>
+					<!-- </div> -->
 				</div>
 			</div>
 
 			<div class="section">
 				<div class="row">
 					<div class="col-xs-12 col-sm-12 col-md-5">
+
+					<div class="push-l">	
 						<div class="food-icon"><img src="img/coffee.png"></div>
 						<h3>Clita mucius</h3>
 						<div class="mini-rectangle"></div>
@@ -38,6 +40,8 @@
 							<br>
 							<br><span class="other-color"><a href="#">Mel omnis</a></span></p>
 						</div>
+					</div>
+						
 					<img class="col-xs-12 col-sm-12 col-md-7" src="img/food-drink-kitchen-cutting-board.jpg">
 				</div>	
 			</div>
@@ -46,12 +50,16 @@
 				<div class="row">
 					<img class="col-xs-12 col-sm-12 col-md-7" src="img/food-morning-breakfast-orange-juice.jpg">
 					<div class="col-xs-12 col-sm-12 col-md-5">
-						<div class="food-icon"><img src="img/cook.png"></div>
-						<h3>Dico dicat</h3>
-						<div class="mini-rectangle"></div>
-							<p>Vix liber decore ea, eos quod nullam an, mei saepe dolore eloquentiam te. Vim aperiam docendi consequat ea, suas forensibus at vis. Cu ius eleifend aliquando delicatissimi, legere melius quo et.
-							<br>	
-							<br><span class="other-color"><a href="#">Et oratio</a></span></p>
+
+						<div class="push-r">
+							<div class="food-icon"><img src="img/cook.png"></div>
+							<h3>Dico dicat</h3>
+							<div class="mini-rectangle"></div>
+								<p>Vix liber decore ea, eos quod nullam an, mei saepe dolore eloquentiam te. Vim aperiam docendi consequat ea, suas forensibus at vis. Cu ius eleifend aliquando delicatissimi, legere melius quo et.
+								<br>	
+								<br><span class="other-color"><a href="#">Et oratio</a></span></p>
+						</div>	
+							
 					</div>
 				</div>
 			</div>
@@ -59,12 +67,14 @@
 			<div class="section">
 				<div class="row">
 					<div class="col-xs-12 col-sm-12 col-md-5">
-						<div class="food-icon"><img src="img/fork-knife.png"></div>
-						<h3>Vix liber</h3>
-						<div class="mini-rectangle"></div>
-							<p>Ne mea solum tation moderatius. Pri purto senserit complectitur at, vel ei debitis eleifend patrioque. An has dolorum intellegam. Dico dicat in pri, mel tollit pertinax ad.
-							<br>	
-							<br><span class="other-color"><a href="#">Meliore nominati</a></span></p>
+						<div class="push-l">	
+							<div class="food-icon"><img src="img/fork-knife.png"></div>
+							<h3>Vix liber</h3>
+							<div class="mini-rectangle"></div>
+								<p>Ne mea solum tation moderatius. Pri purto senserit complectitur at, vel ei debitis eleifend patrioque. An has dolorum intellegam. Dico dicat in pri, mel tollit pertinax ad.
+								<br>	
+								<br><span class="other-color"><a href="#">Meliore nominati</a></span></p>
+						</div>	
 					</div>
 					<img class="col-xs-12 col-sm-12 col-md-7" src="img/food-vegetables-meal-kitchen.jpg">
 				</div>	
