--- a/practice v4/index.html
+++ b/practice v4/index.html
@@ -3,7 +3,11 @@
 	<head>
 		<title>Lorem Ipsum</title>
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
+		<link href='http://fonts.googleapis.com/css?family=Arvo:400,700|Signika:400,700' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" href="font-awesome-4.3.0/css/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="css/responsive.css">
 	</head>
 
 	<body>
@@ -13,26 +17,76 @@
 			</a>	
 			<nav>
 				<ul>
-					<li><a href="#">Sign Up</a></li>
-					<li><a href="#">Login</a></li>
+					<li class="btn btn-success btn-lg"><a href="#">Sign Up</a></li>
+					<li class="btn btn-info btn-lg"><a href="#">Login</a></li>
 				</ul>
 			</nav>
 		</header>
 
+		<div id="cover-photo">
+			<!-- <img src="img/jumping-cute-playing-animals.jpg"> -->
+		</div>
+
 		<div id="wrapper">
+
 			<div class="info-section">
+				<h2>About Us</h2>
+				<p>Lorem ipsum dolor sit amet, ut cum solum errem officiis. Expetenda signiferumque in pro, quo ad simul putant accusam. In eum nihil periculis. Cum ne malis facilisi. Amet graeco periculis te vim, integre postulant referrentur sit an.
+
+				Deserunt definiebas in eum. Et eum solet ullamcorper necessitatibus, cu mel suas ludus suavitate. Id veri interesset vis. Id vis oratio atomorum repudiare. Utinam consequat delicatissimi ius te, no alii signiferumque mea.</p>
 			</div>
 
-			<div class="team-section"></div>
+			<hr>
 
-			<div class="contact-section"></div>
+			<div class="team-section">
+				<h2>Meet The Team</h2>
+					
+				<div class="row">
+					<div class="col-xs-6 col-md-3">
+						<h5>Anastasija</h5>
+						<img src="img/profile-photo.jpg">
+						<p>Te est epicurei consequuntur, id ius vero aeterno perfecto, ad pro aeque vulputate.</p>
+					</div>
+
+
+					<div class="col-xs-6 col-md-3">
+						<h5>Rikka</h5>
+						<img src="img/rikka.jpg">
+						<p>Lorem ipsum dolor sit amet, ut cum solum errem officiis.</p>
+					</div>
+
+					<div class="col-xs-6 col-md-3">
+						<h5>Bianca</h5>
+						<img src="img/bianca.jpg">
+						<p>Cum ne malis facilisi. Amet graeco periculis te vim.</p>
+					</div>
+
+					<div class="col-xs-6 col-md-3">
+						<h5>Julia</h5>
+						<img src="img/julia.jpg">
+						<p>Utinam consequat delicatissimi ius te, no alii signiferumque mea.</p>
+					</div>
+
+				</div>
+			</div>
+
+			<hr>
+
+			<div class="contact-section">
+				<a href="mailto:email@email.com">Email Us</a>
+				<h3>Or contact via social media</h3>
+				<div class="social-contact">
+					<a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a>
+				</div>
+			</div>
 		</div>
 
 	</body>
 
 	<footer>
-		<div id="social">
-
-		</div>
+		<div id="copyright">All rights reserved 2015 &copy; Website by <a href="www.staciedesign.com">Anastasija Scepak</a></div>
+<!-- 		<div class="social">
+			<a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a>
+		</div> -->
 	</footer>
 </html>
