--- a/practice v4/index.html
+++ b/practice v4/index.html
@@ -42,26 +42,26 @@
 				<h2>Meet The Team</h2>
 					
 				<div class="row">
-					<div class="col-xs-6 col-md-3">
+					<div class="col-xs-12 col-sm-6 col-md-3">
 						<h5>Anastasija</h5>
 						<img src="img/profile-photo.jpg">
 						<p>Te est epicurei consequuntur, id ius vero aeterno perfecto, ad pro aeque vulputate.</p>
 					</div>
 
 
-					<div class="col-xs-6 col-md-3">
+					<div class="col-xs-12 col-sm-6 col-md-3">
 						<h5>Rikka</h5>
 						<img src="img/rikka.jpg">
 						<p>Lorem ipsum dolor sit amet, ut cum solum errem officiis.</p>
 					</div>
 
-					<div class="col-xs-6 col-md-3">
+					<div class="col-xs-12 col-sm-6 col-md-3">
 						<h5>Bianca</h5>
 						<img src="img/bianca.jpg">
 						<p>Cum ne malis facilisi. Amet graeco periculis te vim.</p>
 					</div>
 
-					<div class="col-xs-6 col-md-3">
+					<div class="col-xs-12 col-sm-6 col-md-3">
 						<h5>Julia</h5>
 						<img src="img/julia.jpg">
 						<p>Utinam consequat delicatissimi ius te, no alii signiferumque mea.</p>
