images, css & stuff
colours - changed
images - added
css transitions - done

--- a/practice v6/index.html
+++ b/practice v6/index.html
@@ -1,33 +1,33 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<meta charset="UTF-8">
+		<meta name="keywords" content="Subscription box">
+		<meta name="author" content="Anastasija Scepak">
 		<title>Lorem Ipsum</title>
 		<link rel="stylesheet" type="text/css" href="font-awesome-4.3.0/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link href='http://fonts.googleapis.com/css?family=Lato:400,700|Roboto:400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
-
-		<script src="//code.jquery.com/jquery-latest.min.js"></script>
-		<script src="//unslider.com/unslider.min.js"></script>
+		<link rel="icon" href="img/favicon.ico">
 	</head>
 
 	<body>
 		<header>
-			<div><a href="#">Subscribe</a> today to get your Cat Pack!</div>
+			<!-- <div><a href="#">Subscribe</a> today to get your Cat Pack!</div> -->			
+			<!-- Menu -->
+			<div class="slideout-menu">
+				<!-- <h3><a href="#" class="slideout-menu-toggle"><i class="fa fa-bars"></i></a> Menu</h3> -->
+				<ul>
+					<li><a class="btn btn-default" href="#">Login</a></li>
+					<li><a href="#">Cart</a></li>
+					<li><a href="#">About</a></li>
+					<li><a href="#">Subscription</a></li>
+					<li><a href="#">Contact</a></li>
+				</ul>
+			</div>
 		</header>
-
-		<!-- Menu -->
-		<div class="slideout-menu">
-			<h3><a href="#" class="slideout-menu-toggle"><i class="fa fa-bars"></i></a> Menu</h3>
-			<ul>
-				<li><a class="btn btn-default" href="#">Login</a></li>
-				<li><a href="#">Cart</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Subscription</a></li>
-				<li><a href="#">Contact</a></li>
-			</ul>
-		</div>
 
 		<!-- cover photo with buttons -->
 		<nav>
@@ -42,8 +42,8 @@
 			<div class="about">
 				<h2>Who are we?</h2>
 				<p>Lorem ipsum dolor sit amet, vix sanctus hendrerit argumentum in, quem elitr eloquentiam vis ex. Illum putent assueverit sit id, sint meliore patrioque est ne. Numquam voluptua neglegentur ex sit, dissentiet neglegentur sed ea. Esse putant ancillae cum eu, duo cu latine impedit gloriatur.
-
-				Ei scripta splendide ius. Malis sonet saperet nam ei. Oportere elaboraret ne mea, eu eirmod assentior philosophia vix, ei eum quod nonumes definitiones. Nec an novum invidunt deserunt. Commodo dignissim mei te, causae alienum laboramus pro te. Ea cum persius feugiat nostrum.</p>
+				<br>
+				<br>Ei scripta splendide ius. Malis sonet saperet nam ei. Oportere elaboraret ne mea, eu eirmod assentior philosophia vix, ei eum quod nonumes definitiones. Nec an novum invidunt deserunt. Commodo dignissim mei te, causae alienum laboramus pro te. Ea cum persius feugiat nostrum.</p>
 			</div>
 		</div>
 
@@ -104,8 +104,8 @@
 			<div class="cat-bg">
 				<div class="colour-layer">
 					<div class="quote">
-						<h1>&quot;The only escape from the miseries of life are music and cats...&quot;
-						<br> <h4> &#8212; Albert Schweitzer</h1></h4>
+						<h1>&quot;The only escape from the miseries of life are music and cats...&quot;</h1>
+						<h4> &#8212; Albert Schweitzer</h4>
 					</div>
 				</div>
 			</div>
