--- a/practice v6/index.html
+++ b/practice v6/index.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<meta name="keywords" content="Subscription box">
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="keywords" content="subscription box, cute, cats">
 		<meta name="author" content="Anastasija Scepak">
 		<title>Lorem Ipsum</title>
 		<link rel="stylesheet" type="text/css" href="font-awesome-4.3.0/css/font-awesome.min.css">
@@ -10,15 +11,16 @@
 		<link href='http://fonts.googleapis.com/css?family=Lato:400,700|Roboto:400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+
 		<link rel="icon" href="img/favicon.ico">
+
 	</head>
 
 	<body>
 		<header>
 			<!-- <div><a href="#">Subscribe</a> today to get your Cat Pack!</div> -->			
 			<!-- Menu -->
-			<div class="slideout-menu">
-				<!-- <h3><a href="#" class="slideout-menu-toggle"><i class="fa fa-bars"></i></a> Menu</h3> -->
+			<div class="menu">
 				<ul>
 					<li><a class="btn btn-default" href="#">Login</a></li>
 					<li><a href="#">Cart</a></li>
@@ -125,6 +127,7 @@
 				</div>
 			</div>
 		</footer>
+
 	</body>
 
 </html>
