--- a/Portfolio-v4/index.html
+++ b/Portfolio-v4/index.html
@@ -6,6 +6,7 @@
 		<meta name="keywords" content="HTML5, CCS3, JavaScript, JQuery, Front End Web Development, Web Design, Web Development">
 		<meta name="author" content="Anastasija Scepak">
 		<title>Anastasija Scepak | Front End Web Developer/Designer</title>
+		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700|Lato:400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/bootstrap-3.3.6/css/bootstrap.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
@@ -17,43 +18,60 @@
 			</div>
 		</div>
 
+		<div class="container">
+			<div class="row">
+				<div class="about-me">
+					<div class="col-md-4 profile-image"><img src="img/profile-photo.jpg" alt="image of Anastasija"></div>
+					<div class="col-md-5 info">
+						<p>I'm Anastasija Scepak, a front end web developer/designer, currently I'm located in the United Kingdom. I'm a passionate front end web developer/designer who likes to think out of the box and use my imagination while drafting, sketching and developing/designing beautiful, yet interesting websites. 
+						<br>In 2013 I've graduated from Vilnius University as a translator. I've always had an interest in web development &amp; design, but was too afraid to try of doing it. My partner was always suportive about it and he encouraged me to try a few online courses. 
+						<br>My very first experience in making a website was when I was 13 years old. Back then I had no idea what I was doing, but I really enjoyed it. That experience in the past really helped me out while learning HTML, CSS, JavaScript &amp; JQuery.
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
 		<div id="work-section"></div>
 
-		<div class="about-me">
-			<div class="col-md-3">
-				<div class="profile-photo"><img src="img/photo.jpg"></div>
-			</div>
 
-			<div class="col-md-9">
-				<div class="my-story">
-					<p id="greeting"></p>
-					<p>My name is Anastasija, but you can call me Stacie. I'm a frond-end web developer currently located in the United Kingdom. I'm a passionate front end web developer/designer who likes to think out of the box and use my imagination while drafting, sketching and developing/designing beautiful, yet interesting websites.
-					<br>I've graduated as a bachelor in philology from Vilnius University (Kaunas Faculty of Humanities) in 2013. I always was interested in web design/development, but was afraid to start it. 
-					<br>In becoming a front end web developer/designer I was encouraged by my partner.
-					<br>If you'd like to follow me on Twitter, my user name is <a href="http://www.twitter.com/na7tiu6ka" target="_blank">@na7tiu6ka</a>  
-					</p>
-				</div>
+		<div id="contact-form" class="col-md-12">
+			<div class="contact">
+				<h2>Get In Touch</h2>
+				<p>
+					<label for="name">Name:*</label>
+					<input name="name" id="name" type="text" class="required emailField">
+				</p>
+
+				<p>
+					<label for="email">Email:*</label>
+					<input name="email" id="email" type="text" class="required emailField"> 
+				</p>
+
+				<p>
+					<label for="message">Message:</label>
+					<textarea name="message" id="message" class="required emailField"></textarea> 
+				</p>
+
+				<p class="submit">
+					<img src="img/loader.gif" class="btn-submit-img" style="display: none">
+					<input type="submit" value="Submit" class="btn-submit" disabled>
+					<div class="btn-submit-txt" style="display: none">Your email has been successfully sent!</div>
+				</p>
 			</div>	
-			  </div>
-
-			</div>
 
 		</div>
 
-		<div id="contact-form"></div>
 
-
-		<div id="footer">
+		<div id="footer" class="col-md-12">
 			<div class="socialMedia">	
 			</div>
-
-			<div class="col-md-12">
 				<div class="copyright">
 				    <p>Anastasija Scepak &copy; 2014 - 2016</p> 
 				</div>
-			</div>
-		</div>
+		</div>		
 
 	</body>
+
 
 </html>
