--- a/Elya Portfolio v2/index.html
+++ b/Elya Portfolio v2/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Elie's Art</title>
+		<title>Elya's Art</title>
 		<link rel="icon" href="img/favicon.ico">
+
+		<link href='http://fonts.googleapis.com/css?family=Source+Serif+Pro|Bree+Serif|Lobster+Two' rel='stylesheet' type='text/css'>	
+		<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link href="js/jquery.booklet.1.1.0.css" type="text/css" rel="stylesheet" media="screen" />
+
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.4.4.min.js"></script>
 		<script src="js/jquery.easing.1.3.js" type="text/javascript"></script>
 		<script src="js/jquery.booklet.1.1.0.min.js" type="text/javascript"></script>
 		<script src="js/scroll.js" type="text/javascript"></script>
 		<script src="js/jquery.scrollUp.js" type="text/javascript"></script>
-		<link href='http://fonts.googleapis.com/css?family=Source+Serif+Pro|Bree+Serif|Lobster+Two' rel='stylesheet' type='text/css'>		
-		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<link href="js/jquery.booklet.1.1.0.css" type="text/css" rel="stylesheet" media="screen" />
-
 
 		<script>
 			$(document).ready(
@@ -184,7 +187,8 @@
 			<div id="contact">
 				<h3>Contact Me</h3>
 				<p class="contactText">Feel free to contact me if you have any questions or requests.</p>
-				<iframe src="envelope/contactform.html"></iframe>
+				<p>I will try to respond as soon as possible</p>
+				<div class="email-logo"><a href="mailto:el4anes@gmail.com"><i class="fa fa-envelope"></i></a></div>
 				
 			</div>
 			<!-- Footer -->
