--- a/Practice site/index.html
+++ b/Practice site/index.html
@@ -15,9 +15,9 @@
 		</header>
 
 		<div id="container">
-			<div class="section1"></div>
-			<div class="section2"></div>
-			<div class="section3"></div>
+			<div class="section1">Hello</div>
+			<div class="section2">Goodbye</div>
+			<div class="section3">Please go away</div><br>
 		</div>
 	</body>
 	<footer>
