clock change text
clock change text

--- a/clock/clock.html
+++ b/clock/clock.html
@@ -8,7 +8,7 @@
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
 	</head>
 	<body>
-		<h1>Date &amp; Time</h1>
+		<h1>Date &amp; Time Thingy</h1>
 		<div class="container">
 			<div class="clock">
 				<div id="Date"></div>
